k8s/backend-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: backend-deployment
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: backend
#   template:
#     metadata:
#       labels:
#         app: backend
#     spec:
#       containers:
#         - name: backend
#           image: amiitdev/shopify-backend:latest
#           ports:
#             - containerPort: 3000
#           envFrom:
#             - secretRef:
#                 name: shopify-secret

# For checking pod health

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: amiitdev/shopify-backend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '500m'

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
