k8s/frontend-service.yaml
# this will works at http://192.168.49.2:30008/dashboard

# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-service
# spec:
#   type: NodePort
#   selector:
#     app: frontend
#   ports:
#     - port: 80
#       targetPort: 80
#       nodePort: 30008

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
